正式なアクション名に修正

--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -10,7 +10,7 @@ jobs:
     name: flutter pub get
     steps:
       - uses: actions/checkout@v4
-      - uses: subosito/flutter-actions@v2
+      - uses: subosito/flutter-action@v2
         with:
           flutter-version: 3.22.2
           channel: 'stable'
