--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -23,4 +23,4 @@ jobs:
             ${{ runner.os }}-pub-
       - run: flutter pub get
       - run: flutter analyze
-      - run: echo "完了" 
+      - run: echo "完了です！" 
