--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -16,7 +16,7 @@ jobs:
         with:
           flutter-version: 3.22.2
           channel: 'stable'
-          chche: true
+          cache: true
       - name: Cache pub get
         uses: actions/cache@v3
         with:
