--- a/.github/workflows/tutorial.yaml
+++ b/.github/workflows/tutorial.yaml
@@ -26,4 +26,4 @@ jobs:
             ${{ runner.os }}-pub-
       - run: flutter pub get
       - run: flutter analyze
-      - run: echo "完了です！" 
+      - run: echo "完了です！！" 
