PRにコメント付与テスト_2

--- a/.github/workflows/pr_comment.yaml
+++ b/.github/workflows/pr_comment.yaml
@@ -16,6 +16,6 @@ jobs:
           PR_NUMBER: ${{ github.event.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          echo "PRへのコメント内容をファイルに出力する" > /tmp/comment
+          echo "PRへのコメント内容をファイルに出力する！" > /tmp/comment
           gh pr comment "${PR_NUMBER}" -F /tmp/comment
 
