--- a/.github/workflows/pr_comment.yaml
+++ b/.github/workflows/pr_comment.yaml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   pr_comment_job:
-    runs-on: ubunts-22.04
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
       pull-requests: write
@@ -15,6 +15,7 @@ jobs:
         env:
           PR_NUMBER: ${{ github.event.number }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        timeout-minutes: 5
         run: |
           echo "PRへのコメント内容をファイルに出力する！" > /tmp/comment
           gh pr comment "${PR_NUMBER}" -F /tmp/comment
