--- a/.github/workflows/pr_comment.yaml
+++ b/.github/workflows/pr_comment.yaml
@@ -11,6 +11,8 @@ jobs:
       contents: read
       pull-requests: write
     steps:
+      - name: Clone repository 
+        uses: actions/checkout@v4
       - name: PRにコメントのテスト
         env:
           PR_NUMBER: ${{ github.event.number }}
