--- a/.github/workflows/upload_app_store_connect.yaml
+++ b/.github/workflows/upload_app_store_connect.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Import Code-Signing Certificates
         uses: Apple-Actions/import-codesign-certs@v1 # 外部パッケージを使っている
         with:
-          p12-file-base64: ${{ secrets.CERTIFICATES_P12_BASE64 }}
+          p12-file-base64: ${{ secrets.CERTIFICATE_P12_BASE64 }}
           p12-password: ${{ secrets.CERTIFICATE_PASS }}
 
       # ipa ファイルの出力
