--- a/.github/workflows/upload_app_store_connect.yaml
+++ b/.github/workflows/upload_app_store_connect.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: Apple-Actions/import-codesign-certs@v1 # 外部パッケージを使っている
         with:
           p12-file-base64: ${{ secrets.CERTIFICATE_P12_BASE64 }}
-          p12-password: ${{ secrets.CERTIFICATE_PASS }}
+          p12-password: ${{ secrets.CERTIFICATE_P12_PASS }}
 
       # ipa ファイルの出力
       - name: Create ipa file
