--- a/.github/workflows/upload_app_store_connect.yaml
+++ b/.github/workflows/upload_app_store_connect.yaml
@@ -50,8 +50,8 @@ jobs:
       # ipa ファイルの出力
       - name: Create ipa file
         # GITHUB_RUN_NUMBER をビルドナンバーに指定することで被りがないようにしている。
-        run: flutter build ipa --export-options-plist=DevExportOptions.plist --build-number ${GITHUB_RUN_NUMBER}
+        run: flutter build ipa --export-options-plist=./ios/DevExportOptions.plist --build-number ${GITHUB_RUN_NUMBER}
 
       # AppStoreConnect にアップロードする
       - name: Upload to AppStoreConnect
-        run: xcrun altool --upload-app -f "./build/ios/ipa/github_actios_sample.ipa" -u "${{ secrets.APPLE_ID }}" -p "${{ secrets.APPLE_APP_PASS }}"
+        run: xcrun altool --upload-app -f "./build/ios/ipa/sample_github_actios.ipa" -u "${{ secrets.APPLE_ID }}" -p "${{ secrets.APPLE_APP_PASS }}"
