--- a/.github/workflows/upload_app_store_connect.yaml
+++ b/.github/workflows/upload_app_store_connect.yaml
@@ -54,4 +54,7 @@ jobs:
 
       # AppStoreConnect にアップロードする
       - name: Upload to AppStoreConnect
-        run: xcrun altool --upload-app -type ios -f "build/ios/ipa" -u "${{ secrets.APPLE_ID }}" -p "${{ secrets.APPLE_APP_PASS }}"
+        run: |
+         echo "APPLE_ID; ${{ secrets.APPLE_ID }}
+         echo "APPLE_APP_PASS; ${{ secrets.APPLE_APP_PASS }}"
+         xcrun altool --upload-app -type ios -f "build/ios/ipa" -u "${{ secrets.APPLE_ID }}" -p "${{ secrets.APPLE_APP_PASS }}"
