--- a/ios/DevExportOptions.plist
+++ b/ios/DevExportOptions.plist
@@ -11,7 +11,7 @@
 	<key>method</key>
 	<string>app-store-connect</string>
 	<key>signingStyle</key>
-	<string>manual</string>
+	<string>automatic</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
